--- a/Restlet_JSF/.project
+++ b/Restlet_JSF/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Restlet_JSFApplication</name>
+	<name>Restlet_JSF</name>
 	<comment></comment>
 	<projects>
 	</projects>
